--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 ureq = { version = "2.3.1", features = ["json"] }
 serde = { version = "1.0.130", features = ["derive"] }
 structopt = "0.3.25"
+dialoguer = "0.9.0"
+indicatif = "0.16.2"
