cargo: add more information to the manifest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,16 @@
 name = "dag"
 version = "0.1.0"
 edition = "2021"
+authors = ["devmatteini <dev.matteini@gmail.com>"]
+description = "A command line tool to download assets from GitHub releases"
+homepage = "https://github.com/devmatteini/dag"
+repository = "https://github.com/devmatteini/dag"
+documentation = "https://github.com/devmatteini/dag"
+readme = "README.md"
+license = "MIT"
+license-file = "LICENSE"
+categories = ["command-line-utilities"]
+keywords = ["github", "cli"]
 
 [profile.release]
 opt-level = "s"
