ci: do not run github actions when markdown files or assets changes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,13 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - '**.md'
+      - 'assets/**'
   pull_request:
+    paths-ignore:
+      - '**.md'
+      - 'assets/**'
 
 env:
   CARGO_TERM_COLOR: always
