--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ codegen-units = 1
 ureq = { version = "2.3.1", features = ["json"] }
 serde = { version = "1.0.130", features = ["derive"] }
 structopt = "0.3.25"
+clap = { version = "3.0.13", features = ["derive"] }
 dialoguer = "0.9.0"
 indicatif = "0.16.2"
 
