--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ lto = true
 codegen-units = 1
 
 [dependencies]
-ureq = { version = "2.3.1", features = ["json"] }
+ureq = { version = "2.4.0", default-features = false, features = ["tls", "json"] }
 serde = { version = "1.0.136", features = ["derive"] }
 clap = { version = "3.0.13", features = ["derive"] }
 dialoguer = "0.9.0"
