--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1.0.136", features = ["derive"] }
 clap = { version = "3.0.13", features = ["derive"] }
 dialoguer = "0.9.0"
 indicatif = "0.16.2"
+uuid = { version = "0.8.2", features = ["v4"] }
 
 [dev-dependencies]
 test-case = "1.2.1"
