devtools: pass GITHUB_TOKEN env variable to container to avoid rate limit error
If the github token is not passed, you could occasionally get 'status code 403'

--- a/devtools/Dockerfile.ubuntu
+++ b/devtools/Dockerfile.ubuntu
@@ -5,6 +5,8 @@ COPY src/ src/
 RUN cargo install --path .
 
 FROM ubuntu:20.04
+ARG GITHUB_TOKEN
+ENV GITHUB_TOKEN=$GITHUB_TOKEN
 # Add user with no root permissions
 RUN useradd -ms /bin/bash tester
 COPY --from=builder /usr/local/cargo/bin/dra /usr/local/bin/dra
