--- a/devtools/Dockerfile.ubuntu
+++ b/devtools/Dockerfile.ubuntu
@@ -12,7 +12,7 @@ RUN cargo install --debug --path .
 FROM ubuntu:20.04
 ARG GITHUB_TOKEN
 ENV GITHUB_TOKEN=$GITHUB_TOKEN
-RUN apt-get update && apt-get install -y xz-utils && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y unzip xz-utils && rm -rf /var/lib/apt/lists/*
 # Add user with no root permissions
 RUN useradd -ms /bin/bash tester
 COPY --from=builder /usr/local/cargo/bin/dra /usr/local/bin/dra
