--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ clap = { version = "3.0.13", features = ["derive"] }
 dialoguer = "0.9.0"
 indicatif = "0.16.2"
 uuid = { version = "0.8.2", features = ["v4"] }
+ctrlc = "3.2.1"
 
 [dev-dependencies]
 test-case = "1.2.1"
