--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "dra"
 version = "0.3.1"
 edition = "2021"
-authors = ["devmatteini <dev.matteini@gmail.com>"]
+authors = ["Cosimo Matteini <dev.matteini@gmail.com>"]
 description = "A command line tool to download release assets from GitHub"
 homepage = "https://github.com/devmatteini/dra"
 repository = "https://github.com/devmatteini/dra"
