--- a/devtools/Dockerfile.ubuntu
+++ b/devtools/Dockerfile.ubuntu
@@ -1,18 +1,7 @@
-FROM rust as builder
-WORKDIR /app
-RUN cargo init --bin
-COPY Cargo.* ./
-# This step will be cached when dependencies do not change (https://whitfin.io/speeding-up-rust-docker-builds/)
-RUN cargo build
-RUN rm -rf src/ target/debug/deps/dra*
-# Copy real source files
-COPY src/ src/
-RUN cargo install --debug --path .
-
 FROM ubuntu:20.04
 ARG GITHUB_TOKEN
 ENV GITHUB_TOKEN=$GITHUB_TOKEN
 RUN apt-get update && apt-get install -y unzip xz-utils && rm -rf /var/lib/apt/lists/*
 # Add user with no root permissions
 RUN useradd -ms /bin/bash tester
-COPY --from=builder /usr/local/cargo/bin/dra /usr/local/bin/dra
+COPY ./target/debug/dra /usr/local/bin/dra
