--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,30 +47,10 @@ jobs:
           echo "::set-output name=DEB_FILE::$deb_file"
 
       - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.DRA_VERSION }}
-          release_name: ${{ env.DRA_VERSION }}
-
-      - name: Upload archive to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.build_archive.outputs.ARCHIVE }}
-          asset_name: ${{ steps.build_archive.outputs.ARCHIVE }}
-          asset_content_type: application/gzip
-
-      - name: Upload deb to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.build_deb.outputs.DEB_FILE }}
-          asset_name: ${{ steps.build_deb.outputs.DEB_FILE }}
-          asset_content_type: application/octet-stream
+        run: |
+          ./scripts/create-github-release.sh \
+              "$DRA_VERSION" \
+              ${{ steps.build_archive.outputs.ARCHIVE }} \
+              ${{ steps.build_deb.outputs.DEB_FILE }}
