--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ dialoguer = "0.10.0"
 indicatif = "0.16.2"
 uuid = { version = "0.8.2", features = ["v4"] }
 ctrlc = "3.2.2"
+walkdir = "2.3.2"
 
 [dev-dependencies]
 test-case = "1.2.3"
