--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ indicatif = "0.17.1"
 uuid = { version = "1.2.1", features = ["v4"] }
 ctrlc = "3.2.3"
 walkdir = "2.3.2"
+zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
 test-case = "2.2.2"
