--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,10 @@ uuid = { version = "1.2.1", features = ["v4"] }
 ctrlc = "3.2.3"
 walkdir = "2.3.2"
 zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
+flate2 = { version = "1.0", features = ["zlib"] }
+tar = "0.4"
+xz2 = "0.1"
+bzip2 = "0.4"
 
 [dev-dependencies]
 test-case = "2.2.2"
