--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ bzip2 = "0.4"
 
 [dev-dependencies]
 test-case = "2.2.2"
+assert_cmd = "2.0.5"
+predicates = "2.1.1"
 
 [package.metadata.deb]
 section = "utility"
