ci: run integration tests on all os
On ubuntu more integration tests run using docker like we were doing before

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,14 @@ jobs:
         run: make test
 
       - name: Integration tests
-        if: startsWith(matrix.os, 'ubuntu')
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make integration-tests
+
+      - name: Debian integration tests
+        if: startsWith(matrix.os, 'ubuntu')
+        shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: make debian-tests
