--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,9 @@ jobs:
         if: matrix.job.use-cross == true
         shell: bash
         run: |
-          cargo install cross
+          if ! command -v cross >/dev/null; then
+            cargo install cross
+          fi
           echo "CARGO_BIN=cross" >>$GITHUB_ENV
           echo "CARGO_TARGET=--target ${{ matrix.job.target }}" >>$GITHUB_ENV
 
