--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,10 @@ jobs:
             runner: ubuntu-latest
             target: arm-unknown-linux-gnueabihf
             use-cross: true
+          - os: linux-arm64
+            runner: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            use-cross: true
           - os: macos
             runner: macos-latest
             target: x86_64-apple-darwin
