--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,15 +25,15 @@ jobs:
       matrix:
         job:
           - os: linux
-            runner: ubuntu-latest
+            runner: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             use-cross: false
           - os: linux-armv6
-            runner: ubuntu-latest
+            runner: ubuntu-22.04
             target: arm-unknown-linux-gnueabihf
             use-cross: true
           - os: linux-arm64
-            runner: ubuntu-latest
+            runner: ubuntu-22.04
             target: aarch64-unknown-linux-gnu
             use-cross: true
           - os: macos
