--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   create-release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
 
@@ -37,15 +37,15 @@ jobs:
       matrix:
         job:
           - os: linux
-            runner: ubuntu-latest
+            runner: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             use-cross: false
           - os: linux-armv6
-            runner: ubuntu-latest
+            runner: ubuntu-22.04
             target: arm-unknown-linux-gnueabihf
             use-cross: true
           - os: linux-arm64
-            runner: ubuntu-latest
+            runner: ubuntu-22.04
             target: aarch64-unknown-linux-gnu
             use-cross: true
           - os: macos
