ci+release: disable fail fast for matrix strategy

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
     needs: [ create-release ]
     runs-on: ${{ matrix.job.runner }}
     strategy:
+      fail-fast: false
       matrix:
         job:
           - os: linux
