--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
     name: ${{ matrix.job.os }}
     runs-on: ${{ matrix.job.runner }}
     strategy:
+      fail-fast: false
       matrix:
         job:
           - os: linux
