--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ flate2 = { version = "1.0.25", features = ["zlib"] }
 tar = "0.4.38"
 xz2 = "0.1.7"
 bzip2 = "0.4.4"
+arboard = {version = "3.2.0", default-features = false}
 
 [dev-dependencies]
 test-case = "2.2.2"
