--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,15 +82,7 @@ jobs:
         with:
           targets: "${{ matrix.job.target }}"
 
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ matrix.job.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - uses: Swatinem/rust-cache@v2
 
       - name: Setup build tools
         if: matrix.job.use-cross == true
