ci+scripts: extract build-tools.sh script to install cross

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,7 @@ jobs:
         if: matrix.job.use-cross == true
         shell: bash
         run: |
-          if ! command -v cross >/dev/null; then
-            cargo install cross
-          fi
+          ./scripts/ci/build-tools.sh
           echo "CARGO_BIN=cross" >>$GITHUB_ENV
           echo "CARGO_TARGET=${{ matrix.job.target }}" >>$GITHUB_ENV
 
