ci: use taiki-e/install-action to install cross
This will avoid compiling cross with cargo everytime since Swatinem/rust-cache doesn't cache .cargo/bin properly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,11 +61,15 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         if: ${{ github.event_name != 'pull_request' }}
 
+      - uses: taiki-e/install-action@v2
+        if: matrix.job.use-cross == true
+        with:
+          tool: cross
+
       - name: Setup build tools
         if: matrix.job.use-cross == true
         shell: bash
         run: |
-          ./scripts/ci/build-tools.sh
           echo "CARGO_BIN=cross" >>$GITHUB_ENV
           echo "CARGO_TARGET=${{ matrix.job.target }}" >>$GITHUB_ENV
 
