--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,6 +99,10 @@ jobs:
             runner: ubuntu-22.04
             target: aarch64-unknown-linux-gnu
             use-cross: true
+          - os: macos-arm64
+            runner: macos-latest
+            target: aarch64-apple-darwin
+            use-cross: false
     steps:
       - uses: actions/checkout@v4
 
