--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,10 @@ jobs:
             runner: macos-latest
             target: x86_64-apple-darwin
             use-cross: false
+          - os: macos-arm64
+            runner: macos-latest
+            target: aarch64-apple-darwin
+            use-cross: false
           - os: windows
             runner: windows-latest
             target: x86_64-pc-windows-msvc
