--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ lto = true
 codegen-units = 1
 
 [dependencies]
-ureq = { version = "2.9.1", default-features = false, features = ["tls", "json"] }
+ureq = { version = "2.9.1", default-features = false, features = ["tls", "json", "proxy-from-env"] }
 serde = { version = "1.0.193", features = ["derive"] }
 clap = { version = "4.4.10", features = ["derive"] }
 clap_complete = "4.4.4"
