--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         job:
           - os: linux
             runner: ubuntu-22.04
-          - os: macos
+          - os: macos-arm64
             runner: macos-latest
           - os: windows
             runner: windows-latest
@@ -99,9 +99,9 @@ jobs:
             runner: ubuntu-22.04
             target: aarch64-unknown-linux-gnu
             use-cross: true
-          - os: macos-arm64
-            runner: macos-latest
-            target: aarch64-apple-darwin
+          - os: macos-x86_64
+            runner: macos-13
+            target: x86_64-apple-darwin
             use-cross: false
     steps:
       - uses: actions/checkout@v4
