--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
             target: aarch64-unknown-linux-gnu
             use-cross: true
           - os: macos
-            runner: macos-latest
+            runner: macos-13
             target: x86_64-apple-darwin
             use-cross: false
           - os: macos-arm64
