--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tar = "0.4.42"
 xz2 = "0.1.7"
 bzip2 = "0.4.4"
 urlencoding = "2.1.3"
+itertools = "0.13.0"
 
 [dev-dependencies]
 test-case = "3.3.1"
