ci: add pre-conditions on deploy pipeline

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ env:
 
 jobs:
   create-release:
+    if: github.repository_owner == 'devmatteini'
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
