install: add github actions workflow to test script on ubuntu, macos and windows (#263)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,12 @@ on:
     paths-ignore:
       - "**.md"
       - "assets/**"
+      - "install.sh"
   pull_request:
     paths-ignore:
       - "**.md"
       - "assets/**"
+      - "install.sh"
 
 env:
   CARGO_TERM_COLOR: always
