--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ xz2 = "0.1.7"
 bzip2 = "0.6.0"
 urlencoding = "2.1.3"
 itertools = "0.14.0"
+url = "2.5.4"
 
 [dev-dependencies]
 test-case = "3.3.1"
