--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
             target: aarch64-unknown-linux-gnu
             use-cross: true
           - os: macos
-            runner: macos-13
+            runner: macos-15-intel
             target: x86_64-apple-darwin
             use-cross: false
           - os: macos-arm64
